mobile spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ iframe {
 
 .image-container {
 	max-width: 1200px;
-	width: 95%;
+	width: 90%;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -106,7 +106,7 @@ iframe {
 
 .process-container {
 	max-width: 1200px;
-	width: 95%;
+	width: 90%;
 	margin: 0 auto;
 	overflow: hidden;
 	padding: 60px 0 40px 0;
@@ -114,7 +114,7 @@ iframe {
 
 .desc-container {
 	max-width: 600px;
-	width: 95%;
+	width: 90%;
 	margin: 0 auto;
 	overflow: hidden;
 	padding: 60px 0 60px 0;
@@ -428,6 +428,16 @@ h4 {
 		font-size: 30px;
 	}
 
+	.desc-container h6 {
+		color: #000;
+		font-size: 24px;
+	}
+
+	.image-bg {
+		background-color: #c4dee6;
+		padding: 20px 0 30px 0;
+	}
+
 	.featured-item {
 		margin: 0;
 	}
@@ -435,6 +445,10 @@ h4 {
 	.row {
 		flex-direction: column;
 		align-items: center;
+	}
+
+	#header {
+		padding: 0 0 30px 0;
 	}
 
 	.row .item {
@@ -447,7 +461,11 @@ h4 {
 
 	.row img {
 		width: 100%;
-		margin-top: 40px;
+		margin-top: 20px;
+	}
+
+	.half-row {
+		margin: 20px auto;
 	}
 
 	.featured-img img {
